--- a/public/style.css
+++ b/public/style.css
@@ -5,7 +5,7 @@
 
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
-  background-color: #767474;
+  background-color: #544b4b;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -35,32 +35,55 @@ h1 {
   line-height: 1.1;
 }
 
+.navbar {
+  position: absolute;
+  top: 5%;
+  left: 0%;
+  background-color: #333;
+  min-width: 100%;
+  padding: 5px;
+}
+
+.navbar ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+}
+
+.navbar li {
+  display: inline-block;
+}
+
+.navbar a {
+  display: block;
+  padding: 8px;
+  border-radius: 10px;
+  border: 2px solid;
+  width: 100px;
+}
+
+.alert-bar {
+  position: absolute;
+  top: 0%;
+  left: 0%;
+  background-color: #03cd0d;
+  min-width: 100%;
+  padding: 8px;
+}
+
+.alert-bar h3 {
+  margin: 0;
+  padding: 0;
+}
+
 #app {
   max-width: 1280px;
+  max-height: 100vh;
   margin: 0 auto;
   padding: 2rem;
   text-align: center;
-}
+  overflow: scroll;
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.vanilla:hover {
-  filter: drop-shadow(0 0 2em #f7df1eaa);
-}
-
-.card {
-  padding: 2em;
-}
-
-.read-the-docs {
-  color: #888;
 }
 
 button {
@@ -80,17 +103,4 @@ button:hover {
 button:focus,
 button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
-}
-
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
 }
