--- a/public/pages/wiki.css
+++ b/public/pages/wiki.css
@@ -42,12 +42,13 @@ code {
     height: max-content;
     left: 2.5%;
     top: 10%;
+    display: inline-block;
 }
 
 .wiki-content .content {
     display: inline-block;
     position: absolute;
-    height: fit-content;
+    height: 100%;
     width: max-content;
     left: 0%;
 }
