--- a/styles.css
+++ b/styles.css
@@ -26,8 +26,9 @@ body {
 }
 
 #link_tray {
-    vertical-align: center;
-    text-align: center;
+    display: flex;
+    align-items: center;
+    justify-content: center;
     margin-top: 5px;
 }
 
