--- a/styles.css
+++ b/styles.css
@@ -99,6 +99,9 @@ p {
   font-size: 16px;
   border: none;
   cursor: pointer;
+  position: absolute;
+  top: 0;
+  left: 0;
 }
 
 .dropbtn:hover, .dropbtn:focus {
@@ -117,6 +120,8 @@ p {
   min-width: 160px;
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
   z-index: 1;
+  top: 100%;
+  left: 0;
 }
 
 .dropdown-content a {
