--- a/styles.css
+++ b/styles.css
@@ -103,7 +103,7 @@ p {
   top: 50%;
   display: inline;
   position: absolute;
-  left: 0px;
+  right: 500px;
 }
 
 .dropbtn:hover, .dropbtn:focus {
