--- a/styles.css
+++ b/styles.css
@@ -95,11 +95,13 @@ p {
 .dropbtn {
   background-color: #111111;
   color: white;
+  padding: 12px 17px;
   font-size: 16px;
   border: none;
   border-radius: 10px;
   cursor: pointer;
   top: 50%;
+  display: inline;
   position: absolute;
 }
 
@@ -109,6 +111,8 @@ p {
 
 .dropdown {
   position: absolute;
+  margin: 1em
+  right: 999px;
 }
 
 .dropdown-content {
@@ -118,7 +122,7 @@ p {
   min-width: 160px;
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
   z-index: 1;
-  top: 100px;
+  top: 100%;
   left: 0;
   border-radius: 10px;
 }
