--- a/styles.css
+++ b/styles.css
@@ -122,7 +122,7 @@ p {
   min-width: 160px;
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
   z-index: 1;
-  top: 36px;
+  top: 40px;
   left: 0;
   border-radius: 10px;
 }
@@ -136,7 +136,7 @@ p {
 }
 
 .dropdown-content a:hover {
-  background-color: #ddd;
+  background-color: #333333;
 }
 
 .dropdown:hover .dropdown-content {
@@ -144,5 +144,5 @@ p {
 }
 
 .dropdown:hover .dropbtn {
-  background-color: #ddd;
+  background-color: #222222;
 }
