--- a/public/style.css
+++ b/public/style.css
@@ -5,7 +5,7 @@
 
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
-  background-color: #544b4b;
+  background-color: #111111;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -22,60 +22,10 @@ a:hover {
   color: #535bf2;
 }
 
-body {
-  margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
-}
 
 h1 {
   font-size: 3.2em;
   line-height: 1.1;
-}
-
-.navbar {
-  position: absolute;
-  top: 5%;
-  left: 0%;
-  background-color: #333;
-  min-width: 101%;
-  padding: 5px;
-  text-align: center;
-}
-
-.navbar ul {
-  list-style-type: none;
-  margin: 0;
-  padding: 0;
-}
-
-.navbar li {
-  display: inline-block;
-}
-
-.navbar a {
-  display: block;
-  padding: 8px;
-  border-radius: 10px;
-  border: 2px solid;
-  width: 100px;
-}
-
-.alert-bar {
-  position: absolute;
-  top: 0%;
-  left: 0%;
-  background-color: #03cd0d;
-  min-width: 100%;
-  padding: 8px;
-  text-align: center;
-}
-
-.alert-bar h3 {
-  margin: 0;
-  padding: 0;
 }
 
 #app {
@@ -85,21 +35,150 @@ h1 {
   padding: 2rem;
 }
 
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
+body {
+  color: white;
+  margin: 0;
+  padding: 0;
+  font-family: 'Roboto', sans-serif;
+  display: flex;
+  place-items: center;
+  min-width: 320px;
+  min-height: 100vh;
 }
-button:hover {
-  border-color: #646cff;
+
+#header {
+  background-color: #222222;
+  color: white;
+  text-align: center;
+  padding: 10px;
+  width: 100vw;
+  margin: 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  height: 38px;
 }
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
+
+#header h1 {
+  margin: 0;
+  margin-bottom: 5px;
+}
+
+#link_tray {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-top: 10px;
+}
+
+#link_tray a {
+  color: white;
+  text-decoration: none;
+  margin: 0 10px;
+}
+
+#box {
+  background: linear-gradient(to bottom right, lime, darkgreen);
+  color: white;
+  text-align: center;
+  padding: 20px;
+  border-radius: 20px;
+  margin: 20px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.box-img {
+  width: 35px;
+  margin-left: 10px;
+}
+
+#content {
+  background-color: #222222;
+  color: white;
+  text-align: left;
+  padding: 20px;
+  border-radius: 20px;
+  margin: 20px;
+}
+
+.index-h3 {
+  position: relative;
+  font-size: 1.5em;
+  font-weight: bold;
+  margin-bottom: 0.5em;
+}
+
+h3::after {
+  content: '';
+  display: block;
+  width: 80%;
+  height: 1px;
+  background-color: #999999;
+  position: absolute;
+  bottom: -0.5em;
+  left: 0;
+}
+
+p {
+  margin-top: 1.66em;
+  margin-bottom: 3.25em;
+}
+      
+#box h2 {
+  display: inline;
+  margin-left: 10px;
+}
+
+.dropbtn {
+background-color: #111111;
+color: white;
+padding: 12px 17px;
+font-size: 16px;
+border: none;
+border-radius: 10px;
+cursor: pointer;
+top: 50%;
+display: inline;
+position: absolute;
+}
+
+.dropbtn:hover, .dropbtn:focus {
+background-color: #333333;
+}
+
+.dropdown {
+position: absolute;
+margin-left: 0.5em;
+left: 0;
+}
+
+.dropdown-content {
+display: none;
+position: absolute;
+background-color: #f1f1f1;
+min-width: 160px;
+box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+z-index: 1;
+top: 40px;
+left: 0;
+border-radius: 10px;
+}
+
+.dropdown-content a {
+color: black;
+padding: 12px 16px;
+text-decoration: none;
+display: block;
+border-radius: 10px;
+}
+
+.dropdown-content a:hover {
+background-color: #ddd;
+}
+
+.dropdown:hover .dropdown-content {
+display: block;
 }
