--- a/public/style.css
+++ b/public/style.css
@@ -22,6 +22,7 @@ a:hover {
   color: #535bf2;
 }
 
+
 h1 {
   font-size: 3.2em;
   line-height: 1.1;
@@ -29,8 +30,8 @@ h1 {
 
 #app {
   max-width: 1280px;
+  max-height: 100vh;
   margin: 0 auto;
-  padding: 2em;
 }
 
 body {
@@ -55,7 +56,6 @@ body {
   justify-content: space-between;
   align-items: center;
   height: 38px;
-  top: 0;
 }
 
 #header h1 {
