--- a/public/pages/wiki.css
+++ b/public/pages/wiki.css
@@ -19,7 +19,8 @@ pre code {
 .table-of-contents {
     position: relative;
     top: 10%;
-    margin: 0 auto;
+    left: 50%;
+    transform: translateX(-50%);
 }
 
 .table-of-contents ul {
