--- a/public/pages/wiki.css
+++ b/public/pages/wiki.css
@@ -19,8 +19,7 @@ pre code {
 .table-of-contents {
     position: relative;
     top: 10%;
-    left: 50%;
-    transform: translateX(-50%);
+    margin: 1.2em;
 }
 
 .table-of-contents ul {
