--- a/public/style.css
+++ b/public/style.css
@@ -40,7 +40,7 @@ body {
   padding: 0;
   font-family: 'Roboto', sans-serif;
   display: flex;
-  place-items: center;
+  /* place-items: center; */
   min-width: 320px;
 }
 
