--- a/public/style.css
+++ b/public/style.css
@@ -22,7 +22,6 @@ a:hover {
   color: #535bf2;
 }
 
-
 h1 {
   font-size: 3.2em;
   line-height: 1.1;
@@ -30,7 +29,7 @@ h1 {
 
 #app {
   max-width: 1280px;
-  max-height: 100vh;
+  /* max-height: 100vh; */
   margin: 0 auto;
 }
 
