--- a/public/style.css
+++ b/public/style.css
@@ -15,11 +15,11 @@
 
 a {
   font-weight: 500;
-  color: #646cff;
+  color: #5dade2;
   text-decoration: inherit;
 }
 a:hover {
-  color: #535bf2;
+  color: #3498db;
 }
 
 h1 {
@@ -31,6 +31,7 @@ h1 {
   max-width: 1280px;
   max-height: 100vh;
   margin: 0 auto;
+  border: none;
 }
 
 body {
@@ -41,6 +42,7 @@ body {
   display: flex;
   place-items: center;
   min-width: 320px;
+  border: none;
 }
 
 #header {
