--- a/public/style.css
+++ b/public/style.css
@@ -15,11 +15,11 @@
 
 a {
   font-weight: 500;
-  color: #5dade2;
+  color: #2e86c1;
   text-decoration: inherit;
 }
 a:hover {
-  color: #3498db;
+  color: #2874a6;
 }
 
 h1 {
