--- a/public/style.css
+++ b/public/style.css
@@ -15,11 +15,11 @@
 
 a {
   font-weight: 500;
-  color: #EBF5FB;
+  color: #646cff;
   text-decoration: inherit;
 }
 a:hover {
-  color: #2874a6;
+  color: #535bf2;
 }
 
 h1 {
