--- a/public/pages/wiki.css
+++ b/public/pages/wiki.css
@@ -1,19 +1,13 @@
 code {
-    background-color: gray;
-    padding: 2px;
+    background-color: #282c34;
+    padding: 4px;
     border-radius: 5px;
-    border: 2px solid;
-    border-color: gray;
+    border: 1px solid;
+    border-color: #abb2bf;
 }
 
-pre code {
-    background-color: gray;
-    border-radius: 5px;
-    border: 1px solid gray;
-    display: block;
+li {
     padding: 2px;
-    display: block;
-    white-space: pre-wrap;
 }
 
 .table-of-contents {
@@ -54,10 +48,15 @@ pre code {
 .wiki-main-page {
     position: absolute;
     top: 10%;
-    width: 100%;
+    left: 20%;
+    width: 45%;
     display: flex;
     justify-content: center;
 } 
+
+.wiki-main-page .content {
+    display: inline-block;
+}
 
 .lime-logo {
     position: absolute;
