--- a/public/pages/wiki.css
+++ b/public/pages/wiki.css
@@ -29,10 +29,11 @@ li {
 
 .wiki-content {
     position: relative;
-    width: max-content;
+    width: 100vw;
     height: fit-content;
     margin: 2em;
     display: inline-block;
+    overflow-wrap: normal;
 }
 
 .wiki-content .content {
