--- a/public/style.css
+++ b/public/style.css
@@ -38,7 +38,7 @@ body {
   color: white;
   margin: 0;
   padding: 0;
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Ubuntu', sans-serif;
   display: flex;
   place-items: center;
   min-width: 320px;
