--- a/public/style.css
+++ b/public/style.css
@@ -1,5 +1,5 @@
 :root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+  font-family: 'Ubuntu', sans-serif;
   line-height: 1.5;
   font-weight: 400;
 
@@ -17,6 +17,7 @@ a {
   font-weight: 500;
   color: #646cff;
   text-decoration: inherit;
+  font-family: 'Ubuntu', sans-serif;
 }
 a:hover {
   color: #535bf2;
@@ -58,6 +59,7 @@ body {
   justify-content: space-between;
   align-items: center;
   height: 38px;
+  font-family: 'Ubuntu', sans-serif;
 }
 
 #header h1 {
@@ -107,6 +109,7 @@ body {
   align-items: center;
   justify-content: center;
   bottom: 0px;
+  font-family: 'Ubuntu', sans-serif;
 }
 
 #content {
@@ -157,6 +160,7 @@ p {
   top: 50%;
   display: inline;
   position: absolute;
+  font-family: 'Ubuntu', sans-serif;
 }
 
 .dropbtn:hover, .dropbtn:focus {
@@ -167,6 +171,7 @@ p {
   position: absolute;
   margin-left: 0.5em;
   left: 0;
+  font-family: 'Ubuntu', sans-serif;
 }
 
 .dropdown-content {
