--- a/public/style.css
+++ b/public/style.css
@@ -1,6 +1,6 @@
 :root {
   overflow-x: hidden;
-  font-family: "Ubuntu", sans-serif;
+  font-family: 'Ubuntu', sans-serif;
   line-height: 1.5;
   font-weight: 400;
 
@@ -18,7 +18,7 @@ a {
   font-weight: 500;
   color: #646cff;
   text-decoration: inherit;
-  font-family: "Ubuntu", sans-serif;
+  font-family: 'Ubuntu', sans-serif;
 }
 a:hover {
   color: #535bf2;
@@ -41,7 +41,7 @@ body {
   color: white;
   margin: 0;
   padding: 0;
-  font-family: "Ubuntu", sans-serif;
+  font-family: 'Ubuntu', sans-serif;
 }
 
 #header {
@@ -56,7 +56,7 @@ body {
   justify-content: space-between;
   align-items: center;
   height: 38px;
-  font-family: "Ubuntu", sans-serif;
+  font-family: 'Ubuntu', sans-serif;
 }
 
 #header h1 {
@@ -127,7 +127,7 @@ h3 {
 }
 
 h3::after {
-  content: "";
+  content: '';
   display: block;
   width: 100%;
   height: 0.33px;
@@ -159,7 +159,7 @@ p {
   position: absolute;
   left: 0;
   margin-left: 5px;
-  font-family: "Ubuntu", sans-serif;
+  font-family: 'Ubuntu', sans-serif;
 }
 
 .dropbtn:hover,
@@ -170,7 +170,7 @@ p {
 .dropdown {
   margin-left: 0.5em;
   left: 0;
-  font-family: "Ubuntu", sans-serif;
+  font-family: 'Ubuntu', sans-serif;
 }
 
 .dropdown-content {
@@ -232,9 +232,9 @@ p {
 }
 
 #container:hover #object {
-  content: url("lime/smile.png"); /* Replace the face with smile.png when hovering */
+  content: url('lime/smile.png'); /* Replace the face with smile.png when hovering */
 }
 
 #container:not(:hover) #object {
-  content: url("lime/face.png"); /* Show the original face.png when not hovering */
+  content: url('lime/face.png'); /* Show the original face.png when not hovering */
 }
