--- a/public/style.css
+++ b/public/style.css
@@ -196,6 +196,14 @@ p {
   border-radius: 10px;
 }
 
+.dropdown-content cont-sec {
+  color: black;
+  padding: 6px 8px;
+  text-decoration: none;
+  display: block;
+  border-radius: 10px;
+}
+
 .dropdown-content a:hover {
   background-color: #ddd;
 }
