Rename cont sec class

--- a/public/style.css
+++ b/public/style.css
@@ -196,7 +196,7 @@ p {
   border-radius: 10px;
 }
 
-.dropdown-content cont-sec {
+.cont-sec {
   color: black;
   padding: 6px 8px;
   text-decoration: none;
