--- a/public/style.css
+++ b/public/style.css
@@ -198,10 +198,11 @@ p {
 
 .cont-sec {
   color: black;
-  padding: 6px 8px;
+  padding: 12px 16px;
   text-decoration: none;
   display: block;
   border-radius: 10px;
+  text-align: center;
 }
 
 .dropdown-content a:hover {
