--- a/public/style.css
+++ b/public/style.css
@@ -196,13 +196,13 @@ p {
   border-radius: 10px;
 }
 
-.cont-sec {
-  color: black;
-  padding: 12px 16px;
-  text-decoration: none;
-  display: block;
-  border-radius: 10px;
-  text-align: center;
+.cont-sec a {
+  padding-top: none;
+  padding-bottom: none;
+}
+
+.cont-sec a:hover {
+  background-color: #f1f1f1;
 }
 
 .dropdown-content a:hover {
