--- a/public/pages/downloads.css
+++ b/public/pages/downloads.css
@@ -17,8 +17,76 @@ body {
   display: inline;
   margin: 12px auto;
   font-family: 'Ubuntu', sans-serif;
+}
 
 .build-button:hover,
 .build-button:focus {
   background-color: #333333;
+}
+
+.dropbuild {
+  background-color: #111111;
+  color: white;
+  padding: 12px 17px;
+  font-size: 16px;
+  border: none;
+  border-radius: 10px;
+  cursor: pointer;
+  display: inline;
+  position: absolute;
+  left: 0;
+  margin-left: 5px;
+  font-family: 'Ubuntu', sans-serif;
+}
+
+.dropbuild:hover,
+.dropbbuild:focus {
+  background-color: #333333;
+}
+
+.dropbdown {
+  margin-left: 0.5em;
+  left: 0;
+  font-family: 'Ubuntu', sans-serif;
+}
+
+.dropbdown-content {
+  display: none;
+  position: absolute;
+  background-color: #f1f1f1;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+  z-index: 1;
+  top: 40px;
+  left: 0;
+  border-radius: 10px;
+  opacity: 0;
+  transform: scale(0.8);
+  transition: opacity 0.3s ease, transform 0.3s ease;
+  transform-origin: top;
+  margin-top: 10px;
+}
+
+.dropbdown-content a {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+  border-radius: 10px;
+}
+
+.dropbdown-content a:hover {
+  background-color: #ddd;
+}
+
+.dropbdown:hover .dropbdown-content {
+  display: block;
+  opacity: 1;
+  transform: scale(1);
+}
+
+.dropbdown:hover .dropbdown-content {
+  display: block;
+  opacity: 1;
+  transform: translateY(10px);
 }
