--- a/public/pages/downloads.css
+++ b/public/pages/downloads.css
@@ -59,7 +59,7 @@ body {
   transform: scale(0.8);
   transition: opacity 0.3s ease, transform 0.3s ease;
   transform-origin: top;
-  margin-top: 37%;
+  top: calc(27vh + 100vh / 33);
   position: absolute;
 }
 
