--- a/public/pages/downloads.css
+++ b/public/pages/downloads.css
@@ -59,8 +59,14 @@ body {
   transform: scale(0.8);
   transition: opacity 0.3s ease, transform 0.3s ease;
   transform-origin: top;
-  top: calc((33vh + 100vh / 33) * 2vh);
+  top: calc(33vh + 100vh / 33);
   position: absolute;
+}
+
+@media (max-width: 768px) {
+  .dropbdown-content {
+    top: calc(33vh + 100vh / 33 * 2vh);
+  }
 }
 
 .dropbdown-content a {
