--- a/public/pages/downloads.css
+++ b/public/pages/downloads.css
@@ -24,64 +24,20 @@ body {
   background-color: #333333;
 }
 
-.dropbuild {
-  background-color: #111111;
-  color: white;
-  padding: 12px 17px;
-  font-size: 16px;
-  border: none;
-  border-radius: 10px;
-  cursor: pointer;
-  display: inline;
-  font-family: 'Ubuntu', sans-serif;
-  display: inline;
-}
-
-.dropbuild:hover,
-.dropbbuild:focus {
-  background-color: #333333;
-}
-
-.dropbdown {
-  font-family: 'Ubuntu', sans-serif;
-  display: inline;
-}
-
-.dropbdown-content {
-  display: none;
-  background-color: #f1f1f1;
-  min-width: 160px;
-  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
-  z-index: 1;
-  top: 40px;
-  border-radius: 10px;
-  opacity: 0;
-  transform: scale(0.8);
-  transition: opacity 0.3s ease, transform 0.3s ease;
-  transform-origin: top;
+psep {
   position: relative;
+  font-size: 1.5em;
+  font-weight: bold;
+  margin-bottom: 0.5em;
 }
 
-.dropbdown-content a {
-  color: black;
-  padding: 12px 16px;
-  text-decoration: none;
+psep::after {
+  content: '';
   display: block;
-  border-radius: 10px;
-}
-
-.dropbdown-content a:hover {
-  background-color: #ddd;
-}
-
-.dropbdown:hover .dropbdown-content {
-  display: block;
-  opacity: 1;
-  transform: scale(1);
-}
-
-.dropbdown:hover .dropbdown-content {
-  display: block;
-  opacity: 1;
-  transform: translateY(10px);
+  width: 100%;
+  height: 0.33px;
+  background-color: rgba(153, 153, 153, 0.33);
+  position: absolute;
+  bottom: -0.5em;
+  left: 0;
 }
