--- a/public/pages/downloads.css
+++ b/public/pages/downloads.css
@@ -24,14 +24,14 @@ body {
   background-color: #333333;
 }
 
-psep {
+p .sep {
   position: relative;
   font-size: 1.5em;
   font-weight: bold;
   margin-bottom: 0.5em;
 }
 
-psep::after {
+p .sep::after {
   content: '';
   display: block;
   width: 100%;
