--- a/resources/templates/generic-nav.html
+++ b/resources/templates/generic-nav.html
@@ -8,6 +8,9 @@
     <div id="link_tray">
         <a href="https://github.com/Lime3DS/Lime3DS/releases">Releases</a> |
         <a href="https://github.com/Lime3DS/Lime3DS">GitHub</a> |
+        <span class="desktop-only">
+            <a href="https://lime3ds.github.io/pages/compatibility">Compatibility</a> |
+        </span>
         <a href="/pages/faq">FAQ</a> |
         <a href="https://github.com/Lime3DS/Lime3DS/wiki">Wiki</a> |
         <a href="https://discord.com/invite/4ZjMpAp3M6">Discord</a>
