--- a/resources/templates/generic-nav.html
+++ b/resources/templates/generic-nav.html
@@ -6,7 +6,7 @@
     </span>
 
     <div id="link_tray">
-        <a href="https://github.com/Lime3DS/Lime3DS/releases">Releases</a> |
+        <a href="/pages/download">Download</a> |
         <a href="https://github.com/Lime3DS/Lime3DS">GitHub</a> |
         <span class="desktop-only">
             <a href="https://lime3ds.github.io/pages/compatibility">Compatibility</a> |
